# AI-Scientist

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: experiment_runner.md  literature_review.md  paper_writing.md  statistical_validation.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
ai_scientist/config/: constants.py  settings.py
ai_scientist/harness/: circuit_breaker.py  graph.py  hooks.py  state.py
docs/: requirements.md
docs/architecture/: system_design.md
docs/research/: README.md  kb_01_sakana_ai_scientist.md  kb_02_agent_architecture.md  kb_03_sentinel_monitoring.md  kb_04_paper_and_literature.md  kb_05_claude_harness.md  kb_06_docker_gpu_training.md  kb_07_self_evolution.md  kb_08_reviewer_validation.md  kb_09_harness_engineering.md  kb_10_research_value.md
