[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-scientist"
version = "0.1.0"
description = "Automated Deep Learning research pipeline: idea to paper draft"
requires-python = ">=3.11"
dependencies = [
    # Orchestration
    # Note: intelligence is Claude Code (CLI), not the Python SDK.
    # LangGraph provides state management, checkpointing, and routing only.
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    # Schemas / validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Monitoring
    "prometheus-client>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    # Literature / embeddings
    "httpx>=0.27.0",
    # Database
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
ai-scientist = "ai_scientist.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ai_scientist"]
omit = ["tests/*"]
